# bevy-lunex-cyberpunk

./: Bevypunk-win.exe.REMOVED.git-id  Bevypunk.REMOVED.git-id  Cargo.toml  README.md  webbuild.zip.REMOVED.git-id
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
assets/images/: background.kra~.REMOVED.git-id
assets/images/intro/: Intro.ase.REMOVED.git-id  frame.kra~.REMOVED.git-id  intro.gif.REMOVED.git-id
assets/images/main_menu/: board.kra.REMOVED.git-id  board.kra~.REMOVED.git-id  menu.kra.REMOVED.git-id
assets/images/settings/: background.kra.REMOVED.git-id  background.kra~.REMOVED.git-id  background.png~.REMOVED.git-id  background4k.png.REMOVED.git-id
assets/scenes/: bedroom.glb.REMOVED.git-id
assets/scenes/skybox/: specular_map.ktx2.REMOVED.git-id
assets/settings/: background.kra.REMOVED.git-id  background.kra~.REMOVED.git-id
crates/game_movies/src/: lib.rs
src/: main.rs
src/routes/game/: route.rs
webbuild/assets/scenes/skybox/: diffuse_map.ktx2.REMOVED.git-id  skybox.ktx2.REMOVED.git-id
