#====================#
#=== PACKAGE INFO ===#

[package]
  name = "bevypunk"
  authors     = ["IDEDARY"]
  version     = "0.0.1"
  edition     = "2021"
  resolver    = "2"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/idedary/bevypunk"

#========================#
#=== PACKAGE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 1

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]

  # GAME ENGINE
  bevy = { version = "^0.15.1" }
  log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

  # ASSETS
  vleue_kinetoscope = { version = "^0.3.0" }
  bevy_embedded_assets = { version = "^0.12.0" }

  # AUDIO
  bevy_kira_audio = { version = "^0.22.0" }

  # PHYSICS
  avian3d = { version = "^0.2.0" }


  # OTHER
  rand = "0.8.5"
